--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "dev":"npx http-server"
+    "dev":"npx live-server --port=5500"
   }
 }
